@@ -217,6 +217,16 @@ scrollbars; one of: <literal>gtk.CORNER_TOP_LEFT</literal>,
 	      scrolled window. Available in <literal>GTK+</literal> 2.2 and
 	      above.</entry>
 	    </row>
+        
+        <row valign="top">
+	      <entry>"scrollbar-within-level"</entry>
+	      <entry>Read</entry>
+
+	      <entry>Whether to place scrollbars within the scrolled window's bevel.
+          Default value: <literal>False</literal>
+          Available in <literal>GTK+</literal> 2.12 and
+	      above.</entry>
+	    </row>
 
 	  </tbody>
 	</tgroup>
