@@ -105,6 +105,16 @@ linkend="function-gtk--settings-get-for-screen">gtk.settings_get_for_screen</lin
 	  <tbody>
 
             <row valign="top">
+              <entry>"gtk-alternative-sort-arrows"</entry>
+              <entry>Read-Write</entry>
+              <entry>Controls the direction of the sort indicators in sorted list
+              and tree views. By default an arrow pointing down means the column
+              is sorted in ascending order. When set to TRUE, this order will be inverted.
+              Default value: <literal>FALSE</literal>
+              This property is available in GTK+ 2.12 and above.</entry>
+            </row>
+            
+            <row valign="top">
               <entry>"color-hash"</entry>
               <entry>Read</entry>
               <entry>Holds a hash table representation of the
@@ -177,6 +187,17 @@ blink. Default value: <literal>True</literal></entry>
 	      <entry>The length of the cursor blink cycle, in
 milliseconds. Allowed values: >= 100. Default value: 1200</entry>
 	    </row>
+        
+        <row valign="top">
+	      <entry>"gtk-cursor-blink-timeout"</entry>
+	      <entry>Read-Write</entry>
+	      <entry>Time after which the cursor stops blinking, in seconds.
+          The timer is reset after each user interaction.
+          Setting this to zero has the same effect as setting
+          GtkSettings:gtk-cursor-blink to <literal>False</literal>.
+          Allowed values: >= 1. Default value: 2147483647.
+          This property is available in GTK+ 2.12 and above.</entry>
+	    </row>
 
             <row valign="top">
               <entry>"gtk-cursor-theme-name"</entry>
@@ -217,10 +238,28 @@ Default value: 250</entry>
 	    </row>
 
             <row valign="top">
+              <entry>"gtk-enable-accels"</entry>
+              <entry>Read-Write</entry>
+              <entry>Whether menu items should have visible accelerators which
+              can be activated.
+              Default value: <literal>True</literal>.
+              This property is available in GTK+ 2.12 and above.</entry>
+            </row>
+
+            <row valign="top">
               <entry>"gtk-enable-animations"</entry>
               <entry>Read-Write</entry>
               <entry>If <literal>True</literal> enable toolkit-wide
               animations. Default value: <literal>True</literal>.</entry>
+            </row>
+            
+            <row valign="top">
+              <entry>"gtk-enable-mnemonics"</entry>
+              <entry>Read-Write</entry>
+              <entry>Whether labels and menu items should have visible mnemonics
+              which can be activated.
+              Default value: <literal>True</literal>.
+              This property is available in GTK+ 2.12 and above.</entry>
             </row>
 
             <row valign="top">
@@ -238,6 +277,20 @@ Default value: 250</entry>
 	      <entry>If <literal>True</literal>, select the contents of an
 entry when it is focused. Default value: <literal>True</literal></entry>
 	    </row>
+        
+            <row valign="top">
+              <entry>"gtk-error-bell"</entry>
+              <entry>Read-Write</entry>
+              <entry>When <literal>True</literal>, keyboard navigation and other
+              input-related errors will cause a beep. Since the error bell is
+              implemented using
+              <methodname><link linkend="method-gdkwindow--bell">gtk.gdk.Window.bell</link></methodname>(),
+              the windowing system may
+              offer ways to configure the error bell in many ways, such as
+              flashing the window or similar visual effects.
+              Default value: <literal>True</literal>.
+              This property is available in GTK+ 2.12 and above.</entry>
+            </row>
 
             <row valign="top">
               <entry>"gtk-fallback-icon-theme"</entry>
@@ -252,6 +305,26 @@ entry when it is focused. Default value: <literal>True</literal></entry>
 	      <entry>The name of the default font to use.
 Default value: "Sans 10"</entry>
 	    </row>
+        
+            <row valign="top">
+              <entry>"gtk-keynav-cursor-only"</entry>
+              <entry>Read-Write</entry>
+              <entry>When <literal>True</literal>, keyboard navigation should be
+              able to reach all widgets by using the cursor keys only. Tab,
+              Shift etc. keys can't be expected to be present on the used
+              input device.
+              Default value: <literal>False</literal>.
+              This property is available in GTK+ 2.12 and above.</entry>
+            </row>
+            
+            <row valign="top">
+              <entry>"gtk-keynav-wrap-around"</entry>
+              <entry>Read-Write</entry>
+              <entry>When <literal>True</literal>, some widgets will wrap around
+              when doing keyboard navigation, such as menus, menubars and notebooks.
+              Default value: <literal>True</literal>.
+              This property is available in GTK+ 2.12 and above.</entry>
+            </row>
 
 	    <row valign="top">
               <entry>"gtk-icon-sizes"</entry>
@@ -329,6 +402,16 @@ Default value: <literal>None</literal></entry>
 	      value: <literal>None</literal>. Available in GTK+ 2.6 and
 	      above.</entry>
 	    </row>
+        
+            <row valign="top">
+              <entry>"gtk-recent-files-limit"</entry>
+              <entry>Read-Write</entry>
+              <entry>The number of recently used files that should be displayed
+              by default by GtkRecentChooser implementations and by the GtkFileChooser.
+              A value of -1 means every recently used file stored.
+              Allowed values: >= -1. Default value: 50.
+              This property is available in GTK+ 2.12 and above.</entry>
+            </row>
 
             <row valign="top">
               <entry>"gtk-scrolled-window-placement"</entry>
@@ -414,6 +497,39 @@ Default value: <literal>None</literal></entry>
 	      <literal>gtk.TOOLBAR_BOTH_HORIZ</literal>.  Default value:
 	      <literal>gtk.TOOLBAR_BOTH</literal></entry>
 	    </row>
+        
+            <row valign="top">
+              <entry>"gtk-tooltip-browse-mode-timeout"</entry>
+              <entry>Read-Write</entry>
+              <entry>Amount of time, in milliseconds, after which the browse mode will be disabled.
+              See GtkSettings:gtk-tooltip-browse-timeout for more information about browse mode.
+              Allowed values: >= 0. Default value: 500.
+              This property is available in GTK+ 2.12 and above</entry>
+            </row>
+            
+            <row valign="top">
+              <entry>"gtk-tooltip-browse-timeout"</entry>
+              <entry>Read-Write</entry>
+              <entry>Controls the time after which tooltips will appear when
+              browse mode is enabled, in milliseconds.
+              Browse mode is enabled when the mouse pointer moves off an object
+              where a tooltip was currently being displayed. If the mouse pointer
+              hits another object before the browse mode timeout expires
+              (see GtkSettings:gtk-tooltip-browse-mode-timeout), it will take the
+              amount of milliseconds specified by this setting to popup the tooltip
+              for the new object.
+              Allowed values: >= 0. Default value: 100.
+              This property is available in GTK+ 2.12 and above</entry>
+            </row>
+            
+            <row valign="top">
+              <entry>"gtk-tooltip-timeout"</entry>
+              <entry>Read-Write</entry>
+              <entry>Time, in milliseconds, after which a tooltip could appear
+              if the cursor is hovering on top of a widget.
+              Allowed values: >= 0. Default value: 1500.
+              This property is available in GTK+ 2.12 and above</entry>
+            </row>
 
             <row valign="top">
               <entry>"gtk-touchscreen-mode"</entry>
