@@ -1,3 +1,9 @@
+2007-10-07  Gian Mario Tagliaretti  <gianmt@gnome.org>
+	
+	* pygtk-gtkstatusicon.xml:
+	* pygtk-gtksettings.xml:
+	* pygtk-gtkscrolledwindow.xml: Updated with 2.12 API.
+
 2007-09-31  Gian Mario Tagliaretti  <gianmt@gnome.org>
 
 	* pygtk-gtkrange.xml: Updated with 2.12 API.
